# TESTAI

./: .codexrules  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .trae-rules  BUG_REGISTRY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EMERGENCY_RESPONSE.md  GIT_PUSH_GUIDE.md  LICENSE  MONOREPO_SPEC.md  OPS_MANUAL.md  README.md  TECH_COMMITTEE_AUDIT_REPORT.md  TECH_COMMITTEE_ITERATION_PLAN.md  TECH_COMMITTEE_JD_MATRIX.md  TECH_COMMITTEE_REVIEW_PROCESS.md  cache_bust.txt  check_ci_status.py  check_encoding.py  ci_trigger.md  ci_trigger.txt  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  governance_e2e_result.txt  mutation_results.json  mutmut.toml  package.json  pyproject.toml  pytest.ini  requirements.txt  run_full_governance.py  run_governance_tests.py  run_mutation_test.py  (+14 more)
.agent_rules/: test_standard.md
.github/: dependabot.yml
apps/server/: main.py  pyproject.toml
apps/server/data/: governance.db
config/: platform_config.json
docs/: BASE REPORT  BUSINESS_SCENARIOS.md  CODE_REVIEW_REPORT_2026.md  EFFECTIVE_TEST_CASES.md  FRAMEWORK_DEFICIENCY_REPORT_FIXED_SDK.md  FRAMEWORK_DEFICIENCY_REPORT_GOVERNANCE_VIOLATION.md  IMPLEMENTABLE_FEATURES.md  JD_MATCH_ANALYSIS.md  PRODUCTION_READINESS_ASSESSMENT_2026.md  QUALITY_ASSURANCE_METHODOLOGY.md  STABLE_CONVERGENCE_SCENARIOS.md  STABLE_DEPLOYED_FEATURES.md  STRICT_ACCEPTANCE_CHECKLIST_2026.md  SYSTEM_AUDIT_REPORT.md  TECH_COMMITTEE_OPERATIONS.md  TEST_CASES_OVERVIEW.md
logs/: api_errors.json
monitoring/: alert_rules.yml  prometheus.yml
prompts/: diagnostic.yaml
scripts/: check_db_health.py  export_structure.py  install_playwright.ps1  load_test.py  simulate_failure.py  test_main_api.py  trigger_stress_test.py  trigger_test.py
(+185 files in other folders)
