[project]
name = "testai-server"
version = "1.0.0"
description = "AI 驱动的测试工具平台 - 后端服务"
requires-python = ">=3.11"

[project.scripts]
testai-server = "src.platform.api:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../../"]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["../../tests"]
pythonpath = ["../../"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true